--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -229,8 +229,7 @@ a {
   border-top: solid 1px #eff0f1; }
 
 .site-footer-owner {
-  display: block;
-  font-weight: bold; }
+  display: block; }
 
 .site-footer-credits {
   color: #819198; }
